--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,9 @@ ij_any_block_comment_at_first_column = false
 ij_any_line_comment_at_first_column = false
 ij_any_block_comment_add_space = true
 ij_any_line_comment_add_space = true
+ij_javascript_spaces_within_object_literal_braces = true
+ij_javascript_spaces_within_object_type_braces = true
+ij_javascript_spaces_within_imports = true
 
 [*.{js,py}]
 charset = utf-8
